# yolo-mac

./: CMakeLists.txt  PLAN.md  README.md
benchmarks/: README.md  convert_to_int8.py  convert_to_w8a8.py  extract_calibration_frames.py  run_benchmark.py  run_benchmark_gpu.py  run_benchmark_gpu_fp16.py  run_benchmark_int8.py  run_benchmark_w8a8.py
examples/: basic_detection.cpp  batch_detection.cpp
include/yolov12/: compute_unit.h  converter.h  detector.h  types.h  yolov12.h
src/: yolov12.mm
src/conversion/: converter.cpp
src/conversion/quantization/: quantizer.cpp
src/inference/: detector.mm  detector_coreml.mm  detector_onnx.cpp  model_loader.mm  postprocessor.cpp  preprocessor.mm  types.cpp
src/python_bridge/: python_interpreter.cpp  python_interpreter.h
src/python_bridge/scripts/: convert_model.py
tools/: benchmark_cli.cpp  convert_cli.cpp
